<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">display_mode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units">Display mode</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="action_add_stock">Add Stock</string>
    <string name="graphic_description">Graphic with data over time.</string>

    <string name="title_widget" translatable="false">StockHawk</string>
    <string name="title_widget_detail" translatable="false">StockHawk Details</string>
    <string name="empty_forecast_list">No data to show.</string>
    <string name="stock_name">Stock Name:</string>
    <string name="stock_symbol">Stock Symbol:</string>
    <string name="price">Price:</string>
    <string name="change">Change (%):</string>
    <string name="change_absolute">Change ($):</string>


    <string name="key_history" translatable="false">extra_history</string>
    <string name="key_symbol" translatable="false">extra_symbol</string>
    <string name="key_price" translatable="false">extra_price</string>
    <string name="key_change_percentage" translatable="false">extra_change_percentage</string>
    <string name="key_change_absolute" translatable="false">extra_change_absolute</string>
    <string name="key_stock_name" translatable="false">extra_stock_name</string>
    <string name="error_stock_dosnt_exist" translatable="false">stock_dont_exist</string>
    <string name="key_stock_dont_exist" translatable="false">stock_dont_exist</string>

    <string name="stock_already_exists">Stock %s already exists!</string>
    <string name="stock_is_not_valid">Stock %s is not valid!</string>
    <string name="stock_dont_exist">Stock %s does not exists.</string>
    <string name="error_fetch_stock_quotes">Error fetching stock quotes</string>


</resources>
