<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.androidplot.xy.XYPlot
            android:id="@+id/plot"
            style="@style/APDefacto.Dark"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/graphic_description"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:backgroundColor="@color/colorPrimaryLight"
            app:domainTitle="domain"
            app:lineLabelRotationBottom="-45"
            app:lineLabels="left|bottom"
            app:rangeTitle="range"
            app:title="A Simple XY Plot" />

        <TextView
            android:id="@+id/tv_stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_name"
            tools:text="Stock Name: Microsoft"
            android:textSize="20sp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_stock_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol"
            tools:text="Stock Symbol: MSFT"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            tools:text="Price: 342.34$"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_change_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            tools:text="Change (%): 24.2%"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_change_absolute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_absolute"
            tools:text="Change ($): 23.2$"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

</ScrollView>